tests/unit/compile/cases/syntax-errors/23.tag-expr-string-escape-unknown-letter.t
Lorem { "ipsum \Q dolor" } sit
---- THROW% ----
Unknown escape-letter code `\Q` near `Q dolor" } sit`
